--- a/src/app/task/pages/taskList/taskList.component.html
+++ b/src/app/task/pages/taskList/taskList.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="taskList.length;else emtyData">
   <h1 class="title">Task List</h1>
   <ul>
-    <li *ngFor="let task of taskList">
+    <li *ngFor="let task of taskList" [routerLink]="['/task/by', task.id]">
       <span>{{ task.name }}</span>
       <div class="contetn-icons">
         <img class="img-icon" (click)="onUpdate(task.id)" src="assets/icons/update.svg"/>
