--- a/src/app/task/components/infoTask/infoTask.component.css
+++ b/src/app/task/components/infoTask/infoTask.component.css
@@ -1,12 +1,19 @@
 .wrapper {
+  border-radius: 6px;
+  border: 2px solid #1BB0FF;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100%;
-  margin: 0 0 0 20px;
+  margin-top: 40px;
+  min-width: 400px;
+  padding: 20px;
 
   p {
-    margin-left: 20px;
+    margin: 0 20px 0 20px;
+  }
+
+  @media (min-width: 0px) and (max-width: 420px) {
+    min-width: auto;
   }
 }
 
