--- a/src/app/task/pages/home/home.component.html
+++ b/src/app/task/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div>
+  <h1 class="title">Task List</h1>
   <task-list (idUpdate)="onUpdate($event)" (idSelected)="onDelete($event)"></task-list>
   <img (click)="onVisible()" class="img-new" src="assets/icons/new.svg"/>
   <form-task [textBtn]="task.id ? 'Actualizar':'Agregar'" [task]="task" (eventCancel)="onCancel($event)" (newTask)="onSubmit($event)" [isVisible]="isVisible"></form-task>
