--- a/src/app/task/components/formTask/formTask.component.html
+++ b/src/app/task/components/formTask/formTask.component.html
@@ -2,11 +2,11 @@
   <div class="container">
     <h2>{{ textBtn }}</h2>
     <form class="contentForm" (ngSubmit)="onSubmit()">
-      <input placeholder="title" [(ngModel)]="task.name" #inputName type="text" name="name" />
+      <input class="input" placeholder="title" [(ngModel)]="task.name" #inputName type="text" name="name" />
       <textarea placeholder="description" [(ngModel)]="task.description" #textArea name="description"></textarea>
       <div class="wrapper-btn">
-        <button type="button" (click)="onCancel()">Cancelar</button>
-        <button type="submit" [disabled]="!task.name || !task.description">{{ textBtn }}</button>
+        <button class="btn-cancel" type="button" (click)="onCancel()">Cancelar</button>
+        <button class="btn-Success" type="submit" [disabled]="!task.name || !task.description">{{ textBtn }}</button>
       </div>
     </form>
   </div>
