--- a/src/app/task/components/infoTask/infoTask.component.html
+++ b/src/app/task/components/infoTask/infoTask.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="task;else notFound" class="wrapper">
-  <h1>{{ task?.name }}</h1>
-  <p>{{ task?.description }}</p>
+  <h1>{{ task.name }}</h1>
+  <p>{{ task.description }}</p>
 </div>
 
 <ng-template #notFound>
