--- a/src/app/task/components/taskList/taskList.component.html
+++ b/src/app/task/components/taskList/taskList.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="taskList.length;else emtyData">
   <ul>
-    <li *ngFor="let task of taskList" [routerLink]="['/task/by', task.id]">
-      <span>{{ task.name }}</span>
+    <li *ngFor="let task of taskList">
+      <span [routerLink]="['/task/by', task.id]">{{ task.name }}</span>
       <div class="contetn-icons">
         <img class="img-icon" (click)="onUpdate(task.id)" src="assets/icons/update.svg"/>
         <img class="img-icon" (click)="onSelected(task.id)" src="assets/icons/delete.svg"/>
